[package]
name = "gtfs-heatmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.5.0"
gtfs_heatmap_lib = {path = "gtfs_heatmap_lib"}
rusqlite = { version = "0.30.0", features = ["bundled"] }
image = "0.24.7"

[workspace]
members = [
    "gtfs_heatmap_lib"
]