[package]
name = "gtfs-heatmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.5"
gtfs_heatmap_lib = {path = "gtfs_heatmap_lib"}
postgres = "0.19.7"
image = "0.24.8"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["deadpool_postgres"]


[workspace]
members = [
    "gtfs_heatmap_lib"
]