[package]
name = "gtfs-heatmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
serde_json = "1.0"
rocket = "0.5"
gtfs_heatmap_lib = {path = "gtfs_heatmap_lib"}
postgres = "0.19.7"
image = "0.25"
time = {version = "0.3.31", features = ["serde"]}

[workspace]
members = [
    "gtfs_heatmap_lib"
]
