[package]
name = "gtfs_heatmap_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# image = "0.25"
# rayon = "1.8.0"
time = {version = "0.3.31", features = ["parsing", "formatting", "macros"]}
futures = "0.3.30"
gtfs-structures = "0.41"